2014-11-18  Christophe Lyon  <christophe.lyon@linaro.org>

	* gcc.target/arm/neon/vbicQs16.c: Regenerate.
	* gcc.target/arm/neon/vbicQs32.c: Likewise.
	* gcc.target/arm/neon/vbicQs64.c: Likewise.
	* gcc.target/arm/neon/vbicQs8.c: Likewise.
	* gcc.target/arm/neon/vbicQu16.c: Likewise.
	* gcc.target/arm/neon/vbicQu32.c: Likewise.
	* gcc.target/arm/neon/vbicQu64.c: Likewise.
	* gcc.target/arm/neon/vbicQu8.c: Likewise.
	* gcc.target/arm/neon/vbics16.c: Likewise.
	* gcc.target/arm/neon/vbics32.c: Likewise.
	* gcc.target/arm/neon/vbics64.c: Likewise.
	* gcc.target/arm/neon/vbics8.c: Likewise.
	* gcc.target/arm/neon/vbicu16.c: Likewise.
	* gcc.target/arm/neon/vbicu32.c: Likewise.
	* gcc.target/arm/neon/vbicu64.c: Likewise.
	* gcc.target/arm/neon/vbicu8.c: Likewise.
	* gcc.target/arm/neon/vornQs16.c: Likewise.
	* gcc.target/arm/neon/vornQs32.c: Likewise.
	* gcc.target/arm/neon/vornQs64.c: Likewise.
	* gcc.target/arm/neon/vornQs8.c: Likewise.
	* gcc.target/arm/neon/vornQu16.c: Likewise.
	* gcc.target/arm/neon/vornQu32.c: Likewise.
	* gcc.target/arm/neon/vornQu64.c: Likewise.
	* gcc.target/arm/neon/vornQu8.c: Likewise.
	* gcc.target/arm/neon/vorns16.c: Likewise.
	* gcc.target/arm/neon/vorns32.c: Likewise.
	* gcc.target/arm/neon/vorns64.c: Likewise.
	* gcc.target/arm/neon/vorns8.c: Likewise.
	* gcc.target/arm/neon/vornu16.c: Likewise.
	* gcc.target/arm/neon/vornu32.c: Likewise.
	* gcc.target/arm/neon/vornu64.c: Likewise.
	* gcc.target/arm/neon/vornu8.c: Likewise.

2014-11-18  Christophe Lyon  <christophe.lyon@linaro.org>

	* gcc.target/aarch64/advsimd-intrinsics/vcls.c: New test.
	* gcc.target/aarch64/advsimd-intrinsics/vcnt.c: New test.
	* gcc.target/aarch64/advsimd-intrinsics/vcombine.c: New test.
	* gcc.target/aarch64/advsimd-intrinsics/vcreate.c: New test.
	* gcc.target/aarch64/advsimd-intrinsics/vcvt.c: New test.
	* gcc.target/aarch64/advsimd-intrinsics/vdup_lane.c: New test.
	* gcc.target/aarch64/advsimd-intrinsics/vext.c: New test.