@@ -1,3 +1,8 @@
+2014-11-18  Paolo Carlini  <paolo.carlini@oracle.com>
+
+	PR c++/60771
+	* g++.dg/cpp0x/constexpr-ref6.C: New.
+
 2014-11-18  Christophe Lyon  <christophe.lyon@linaro.org>
 
 	* gcc.target/arm/neon/vbicQs16.c: Regenerate.
